--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.6",
+    "@react-query-firebase/auth": "^1.0.0-dev.1",
     "daisyui": "^2.19.0",
     "firebase": "^9.9.1",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
+    "react-query": "^3.39.1",
+    "react-toastify": "^9.0.7",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -23,6 +26,7 @@
     "@types/node": "18.0.5",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-query": "^1.2.9",
     "@types/validatorjs": "^3.15.0",
     "autoprefixer": "^10.4.7",
     "eslint": "8.20.0",
