--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.6",
     "@react-query-firebase/auth": "^1.0.0-dev.1",
+    "@react-query-firebase/firestore": "^1.0.0-dev.7",
     "daisyui": "^2.19.0",
     "firebase": "^9.9.1",
     "next": "12.2.2",
@@ -19,6 +20,7 @@
     "react-hook-form": "^7.33.1",
     "react-query": "^3.39.1",
     "react-toastify": "^9.0.7",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/react-query": "^1.2.9",
+    "@types/uuid": "^8.3.4",
     "@types/validatorjs": "^3.15.0",
     "autoprefixer": "^10.4.7",
     "eslint": "8.20.0",
