--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.9.1",
     "next": "12.2.2",
     "react": "18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
     "react-query": "^3.39.1",
