--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
     "@hookform/resolvers": "^2.9.6",
     "@react-query-firebase/auth": "^1.0.0-dev.1",
     "@react-query-firebase/firestore": "^1.0.0-dev.7",
@@ -16,9 +17,11 @@
     "firebase": "^9.9.1",
     "next": "12.2.2",
     "react": "18.2.0",
+    "react-awesome-reveal": "^4.0.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
+    "react-parallax-tilt": "^1.7.57",
     "react-query": "^3.39.1",
     "react-toastify": "^9.0.7",
     "uuid": "^8.3.2",
